--- a/src/co/bookmarks/items/listing.module.styl
+++ b/src/co/bookmarks/items/listing.module.styl
@@ -17,6 +17,7 @@
     position: absolute
     z-index:11
     pointer-events: none
+    box-shadow: inset 0px 0px 0px 2px var(--accent-color)
 }
 
 .grid {
