--- a/src/co/collections/item/view.module.styl
+++ b/src/co/collections/item/view.module.styl
@@ -45,7 +45,7 @@
 }
 
 .isDropping {
-    transition: box-shadow .15s ease-in-out, background .15s ease-in-out
+    transition: box-shadow .1s linear, background .1s linear
     background-color: unquote('hsla(var(--accent-hsl), .1)') !important
     box-shadow: inset 0px 0px 0px 2px var(--accent-color)
 }
